src/test/ui/consts/const-eval/infinite_loop.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/infinite_loop.rs:7:20
   |
LL |             n = if n % 2 == 0 { n/2 } else { 3*n + 1 };
   |                    ^^^^^^^^^^ exceeded interpreter step limit (see `#[const_eval_limit]`)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0080`.
